[gd_scene load_steps=9 format=2]

[ext_resource path="res://Server/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Resources/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Art/whitehat.png" type="Texture" id=3]
[ext_resource path="res://Art/blackhat.png" type="Texture" id=4]
[ext_resource path="res://Resources/Theme/disabled_styleboxtexture.tres" type="StyleBox" id=5]
[ext_resource path="res://Server/Options/DurationsOption.gd" type="Script" id=6]
[ext_resource path="res://Server/Options/RolesAndTeamsOption.gd" type="Script" id=7]
[ext_resource path="res://Server/Options/PlayersOption.gd" type="Script" id=8]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="OptionsTitle" type="Label" parent="."]
margin_left = 73.0
margin_top = 44.0
margin_right = 234.0
margin_bottom = 52.0
rect_scale = Vector2( 11, 11 )
text = "Options"

[node name="Panel" type="Panel" parent="."]
margin_left = 66.0
margin_top = 174.0
margin_right = 184.0
margin_bottom = 266.0
rect_scale = Vector2( 4, 4 )

[node name="Button" type="Button" parent="Panel"]
margin_left = 9.0
margin_top = 12.0
margin_right = 110.0
margin_bottom = 25.0
text = "Save"

[node name="RolesAndTeams" type="VBoxContainer" parent="."]
margin_left = 43.0
margin_top = 594.0
margin_right = 170.0
margin_bottom = 705.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 7 )

[node name="RoleDistributionLabel" type="Label" parent="RolesAndTeams"]
margin_right = 127.0
margin_bottom = 7.0
size_flags_vertical = 1
text = "Role Distribution"
align = 1

[node name="RoleDistribution" type="GridContainer" parent="RolesAndTeams"]
margin_top = 11.0
margin_right = 127.0
margin_bottom = 37.0
columns = 3

[node name="WhitehatTexture" type="TextureRect" parent="RolesAndTeams/RoleDistribution"]
margin_right = 32.0
margin_bottom = 11.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="WhitehatSlider" type="HSlider" parent="RolesAndTeams/RoleDistribution"]
margin_left = 36.0
margin_right = 91.0
margin_bottom = 11.0
rect_min_size = Vector2( 55, 11 )
max_value = 1.0
step = 0.01
value = 0.8

[node name="WhitehatLabel" type="Label" parent="RolesAndTeams/RoleDistribution"]
margin_left = 95.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "80%"
align = 2

[node name="BlackhatTexture" type="TextureRect" parent="RolesAndTeams/RoleDistribution"]
margin_top = 15.0
margin_right = 32.0
margin_bottom = 26.0
size_flags_horizontal = 3
texture = ExtResource( 4 )

[node name="BlackhatSlider" type="HSlider" parent="RolesAndTeams/RoleDistribution"]
margin_left = 36.0
margin_top = 15.0
margin_right = 91.0
margin_bottom = 26.0
rect_min_size = Vector2( 55, 11 )
custom_styles/grabber_area_highlight = ExtResource( 5 )
custom_styles/grabber_area = ExtResource( 5 )
max_value = 1.0
step = 0.01
value = 0.2

[node name="BlackhatLabel" type="Label" parent="RolesAndTeams/RoleDistribution"]
modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
margin_left = 95.0
margin_top = 17.0
margin_right = 127.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "20%"
align = 2

[node name="TeamDistributionLabel" type="Label" parent="RolesAndTeams"]
margin_top = 59.0
margin_right = 127.0
margin_bottom = 66.0
size_flags_vertical = 10
text = "Team Distribution"
align = 1

[node name="TeamDistribution" type="GridContainer" parent="RolesAndTeams"]
margin_top = 70.0
margin_right = 127.0
margin_bottom = 111.0
columns = 3

[node name="RedTexture" type="TextureRect" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 1, 0.25, 0.25, 1 )
margin_right = 32.0
margin_bottom = 11.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="RedSlider" type="HSlider" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 1, 0.25, 0.25, 1 )
margin_left = 36.0
margin_right = 91.0
margin_bottom = 11.0
rect_min_size = Vector2( 55, 11 )
max_value = 1.0
step = 0.01
value = 0.35

[node name="RedLabel" type="Label" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 1, 0.25, 0.25, 1 )
margin_left = 95.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "35%"
align = 2

[node name="BlueTexture" type="TextureRect" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.25, 0.25, 1, 1 )
margin_top = 15.0
margin_right = 32.0
margin_bottom = 26.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="BlueSlider" type="HSlider" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.25, 0.25, 1, 1 )
margin_left = 36.0
margin_top = 15.0
margin_right = 91.0
margin_bottom = 26.0
rect_min_size = Vector2( 55, 11 )
max_value = 1.0
step = 0.01
value = 0.35

[node name="BlueLabel" type="Label" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.25, 0.25, 1, 1 )
margin_left = 95.0
margin_top = 17.0
margin_right = 127.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "35%"
align = 2

[node name="YellowTexture" type="TextureRect" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.63, 0.63, 0.25, 1 )
margin_top = 30.0
margin_right = 32.0
margin_bottom = 41.0
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="YellowSlider" type="HSlider" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.63, 0.63, 0.25, 1 )
margin_left = 36.0
margin_top = 30.0
margin_right = 91.0
margin_bottom = 41.0
rect_min_size = Vector2( 55, 11 )
max_value = 1.0
step = 0.01
value = 0.3

[node name="YellowLabel" type="Label" parent="RolesAndTeams/TeamDistribution"]
modulate = Color( 0.63, 0.63, 0.25, 1 )
margin_left = 95.0
margin_top = 32.0
margin_right = 127.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "30%"
align = 2

[node name="Durations" type="VBoxContainer" parent="."]
margin_left = 606.0
margin_top = 197.0
margin_right = 782.0
margin_bottom = 407.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 6 )

[node name="TimeUnit" type="HBoxContainer" parent="Durations"]
margin_right = 176.0
margin_bottom = 16.0

[node name="TimeUnitLabel" type="Label" parent="Durations/TimeUnit"]
margin_top = 4.0
margin_right = 53.0
margin_bottom = 11.0
text = "Time unit"

[node name="ValueLineEdit" type="LineEdit" parent="Durations/TimeUnit"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 16.0
text = "60"

[node name="UnitOptionButton" type="OptionButton" parent="Durations/TimeUnit"]
margin_left = 115.0
margin_right = 176.0
margin_bottom = 16.0
text = "seconds"
items = [ "seconds", null, false, 0, null, "minutes", null, false, 1, null, "hours", null, false, 2, null, "days", null, false, 3, null ]
selected = 0

[node name="GameDurationLabel" type="Label" parent="Durations"]
margin_top = 28.0
margin_right = 176.0
margin_bottom = 35.0
size_flags_vertical = 10
text = "Game Duration"
align = 1
valign = 1

[node name="GameDuration" type="GridContainer" parent="Durations"]
margin_top = 39.0
margin_right = 176.0
margin_bottom = 65.0
columns = 3

[node name="InititalLabel" type="Label" parent="Durations/GameDuration"]
margin_top = 2.0
margin_right = 55.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "Initial"

[node name="InitialSlider" type="HSlider" parent="Durations/GameDuration"]
margin_left = 59.0
margin_right = 139.0
margin_bottom = 11.0
rect_min_size = Vector2( 80, 0 )
min_value = 5.0
max_value = 120.0
step = 5.0
value = 60.0

[node name="InititalValueLabel" type="Label" parent="Durations/GameDuration"]
margin_left = 143.0
margin_top = 2.0
margin_right = 176.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "60"
align = 2

[node name="IncrementLabel" type="Label" parent="Durations/GameDuration"]
margin_top = 17.0
margin_right = 55.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Increment"

[node name="IncrementSlider" type="HSlider" parent="Durations/GameDuration"]
margin_left = 59.0
margin_top = 15.0
margin_right = 139.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
max_value = 120.0
value = 15.0

[node name="IncrementValueLabel" type="Label" parent="Durations/GameDuration"]
margin_left = 143.0
margin_top = 17.0
margin_right = 176.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "15"
align = 2

[node name="CooldownDurationLabel" type="Label" parent="Durations"]
margin_top = 78.0
margin_right = 176.0
margin_bottom = 85.0
size_flags_vertical = 10
text = "Cooldown Duration"
align = 1
valign = 1

[node name="CooldownDuration" type="GridContainer" parent="Durations"]
margin_top = 89.0
margin_right = 176.0
margin_bottom = 130.0
columns = 3

[node name="AbilityLabel" type="Label" parent="Durations/CooldownDuration"]
margin_top = 2.0
margin_right = 55.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "Ability"

[node name="AbilitySlider" type="HSlider" parent="Durations/CooldownDuration"]
margin_left = 59.0
margin_right = 139.0
margin_bottom = 11.0
rect_min_size = Vector2( 80, 0 )
min_value = 1.0
max_value = 40.0
step = 0.5
value = 12.0

[node name="AbilityValueLabel" type="Label" parent="Durations/CooldownDuration"]
margin_left = 143.0
margin_top = 2.0
margin_right = 176.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "12"
align = 2

[node name="ExpertiseLabel" type="Label" parent="Durations/CooldownDuration"]
margin_top = 17.0
margin_right = 55.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Expertise"

[node name="ExpertiseSlider" type="HSlider" parent="Durations/CooldownDuration"]
margin_left = 59.0
margin_top = 15.0
margin_right = 139.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
min_value = 1.0
max_value = 40.0
step = 0.5
value = 4.0

[node name="ExpertiseValueLabel" type="Label" parent="Durations/CooldownDuration"]
margin_left = 143.0
margin_top = 17.0
margin_right = 176.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "4"
align = 2

[node name="SpecialLabel" type="Label" parent="Durations/CooldownDuration"]
margin_top = 32.0
margin_right = 55.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Special"

[node name="SpecialSlider" type="HSlider" parent="Durations/CooldownDuration"]
margin_left = 59.0
margin_top = 30.0
margin_right = 139.0
margin_bottom = 41.0
rect_min_size = Vector2( 80, 0 )
min_value = 1.0
max_value = 40.0
step = 0.5
value = 15.0

[node name="SpecialValueLabel" type="Label" parent="Durations/CooldownDuration"]
margin_left = 143.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "15"
align = 2

[node name="EffectDurationLabel" type="Label" parent="Durations"]
margin_top = 143.0
margin_right = 176.0
margin_bottom = 150.0
size_flags_vertical = 10
text = "Effect Duration"
align = 1
valign = 1

[node name="EffectDuration" type="GridContainer" parent="Durations"]
margin_top = 154.0
margin_right = 176.0
margin_bottom = 210.0
columns = 3

[node name="HackedLabel" type="Label" parent="Durations/EffectDuration"]
margin_top = 2.0
margin_right = 61.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "Hacked"

[node name="HackedSlider" type="HSlider" parent="Durations/EffectDuration"]
margin_left = 65.0
margin_right = 145.0
margin_bottom = 11.0
rect_min_size = Vector2( 80, 0 )
min_value = 0.5
max_value = 10.0
step = 0.1
value = 1.5

[node name="HackedValueLabel" type="Label" parent="Durations/EffectDuration"]
margin_left = 149.0
margin_top = 2.0
margin_right = 176.0
margin_bottom = 9.0
size_flags_horizontal = 3
text = "1.5"
align = 2

[node name="ForgedLabel" type="Label" parent="Durations/EffectDuration"]
margin_top = 17.0
margin_right = 61.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Forged"

[node name="ForgedSlider" type="HSlider" parent="Durations/EffectDuration"]
margin_left = 65.0
margin_top = 15.0
margin_right = 145.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
max_value = 10.0
step = 0.1
value = 2.0

[node name="ForgedValueLabel" type="Label" parent="Durations/EffectDuration"]
margin_left = 149.0
margin_top = 17.0
margin_right = 176.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "2"
align = 2

[node name="ProtectionLabel" type="Label" parent="Durations/EffectDuration"]
margin_top = 32.0
margin_right = 61.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Protection"

[node name="ProtectionSlider" type="HSlider" parent="Durations/EffectDuration"]
margin_left = 65.0
margin_top = 30.0
margin_right = 145.0
margin_bottom = 41.0
rect_min_size = Vector2( 80, 0 )
max_value = 10.0
step = 0.1
value = 2.0

[node name="ProtectionValueLabel" type="Label" parent="Durations/EffectDuration"]
margin_left = 149.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "2"
align = 2

[node name="ClearanceLabel" type="Label" parent="Durations/EffectDuration"]
margin_top = 47.0
margin_right = 61.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "Clearance"

[node name="ClearanceSlider" type="HSlider" parent="Durations/EffectDuration"]
margin_left = 65.0
margin_top = 45.0
margin_right = 145.0
margin_bottom = 56.0
rect_min_size = Vector2( 80, 0 )
max_value = 10.0
step = 0.1
value = 3.0

[node name="ClearanceValueLabel" type="Label" parent="Durations/EffectDuration"]
margin_left = 149.0
margin_top = 47.0
margin_right = 176.0
margin_bottom = 54.0
size_flags_horizontal = 3
text = "3"
align = 2

[node name="Players" type="VBoxContainer" parent="."]
margin_left = 1392.0
margin_top = 194.0
margin_right = 1510.0
margin_bottom = 402.0
rect_scale = Vector2( 4, 4 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Players"]
margin_right = 118.0
margin_bottom = 7.0
text = "Players"

[node name="PlayerList" type="ItemList" parent="Players"]
margin_top = 11.0
margin_right = 118.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 180 )
max_columns = 2

[node name="PlayerAdder" type="HBoxContainer" parent="Players"]
margin_top = 195.0
margin_right = 118.0
margin_bottom = 208.0

[node name="NameLineEdit" type="LineEdit" parent="Players/PlayerAdder"]
margin_right = 54.0
margin_bottom = 13.0

[node name="AddButton" type="Button" parent="Players/PlayerAdder"]
margin_left = 58.0
margin_right = 71.0
margin_bottom = 13.0
text = "+"

[connection signal="value_changed" from="RolesAndTeams/RoleDistribution/WhitehatSlider" to="RolesAndTeams" method="_on_whitehat_value_changed"]
[connection signal="value_changed" from="RolesAndTeams/RoleDistribution/BlackhatSlider" to="RolesAndTeams" method="_on_blackhat_value_changed"]
[connection signal="value_changed" from="RolesAndTeams/TeamDistribution/RedSlider" to="RolesAndTeams" method="_on_red_value_changed"]
[connection signal="value_changed" from="RolesAndTeams/TeamDistribution/BlueSlider" to="RolesAndTeams" method="_on_blue_value_changed"]
[connection signal="value_changed" from="RolesAndTeams/TeamDistribution/YellowSlider" to="RolesAndTeams" method="_on_yellow_value_changed"]
[connection signal="text_changed" from="Durations/TimeUnit/ValueLineEdit" to="Durations" method="_on_value_changed"]
[connection signal="value_changed" from="Durations/GameDuration/InitialSlider" to="Durations" method="_on_initial_value_changed"]
[connection signal="value_changed" from="Durations/GameDuration/IncrementSlider" to="Durations" method="_on_increment_value_changed"]
[connection signal="value_changed" from="Durations/CooldownDuration/AbilitySlider" to="Durations" method="_on_ability_value_changed"]
[connection signal="value_changed" from="Durations/CooldownDuration/ExpertiseSlider" to="Durations" method="_on_expertise_value_changed"]
[connection signal="value_changed" from="Durations/CooldownDuration/SpecialSlider" to="Durations" method="_on_special_value_changed"]
[connection signal="value_changed" from="Durations/EffectDuration/HackedSlider" to="Durations" method="_on_hacked_value_changed"]
[connection signal="value_changed" from="Durations/EffectDuration/ForgedSlider" to="Durations" method="_on_forged_value_changed"]
[connection signal="value_changed" from="Durations/EffectDuration/ProtectionSlider" to="Durations" method="_on_protection_value_changed"]
[connection signal="value_changed" from="Durations/EffectDuration/ClearanceSlider" to="Durations" method="_on_clearance_value_changed"]
[connection signal="item_selected" from="Players/PlayerList" to="Players" method="_on_player_deleted"]
[connection signal="pressed" from="Players/PlayerAdder/AddButton" to="Players" method="_on_add_player"]
